--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       </div>
 
       <!-- filter buttons -->
-      <div class="btn-container">
+      <!-- <div class="btn-container">
         <button class="filter-btn" type="button" data-id="all">all</button>
         <button class="filter-btn" type="button" data-id="breakfast">
           breakfast
@@ -23,11 +23,11 @@
         <button class="filter-btn" type="button" data-id="shakes">
           shakes
         </button>
-      </div>
+      </div> -->
 
       <div class="section-center">
         <!-- single item -->
-        <article class="menu-item">
+        <!-- <article class="menu-item">
           <img src="./Images/item-1.jpeg" class="photo" alt="menu-item" />
           <div class="item-infe">
             <header>
@@ -41,7 +41,7 @@
               exercitationem commodi voluptatum cupiditate quis minus totam.
             </p>
           </div>
-        </article>
+        </article> -->
         <!-- end of single item -->
       </div>
     </section>
