--- a/index.html
+++ b/index.html
@@ -8,43 +8,75 @@
   </head>
   <body>
     <section class="menu">
+      <!-- title -->
       <div class="title">
         <h2>our menu</h2>
         <div class="underline"></div>
       </div>
-
       <!-- filter buttons -->
-      <!-- <div class="btn-container">
-        <button class="filter-btn" type="button" data-id="all">all</button>
-        <button class="filter-btn" type="button" data-id="breakfast">
+      <div class="btn-container">
+        <!-- <button type="button" class="filter-btn" data-id="all">all</button>
+        <button type="button" class="filter-btn" data-id="breakfast">
           breakfast
         </button>
-        <button class="filter-btn" type="button" data-id="lunch">lunch</button>
-        <button class="filter-btn" type="button" data-id="shakes">
+        <button type="button" class="filter-btn" data-id="lunch">lunch</button>
+        <button type="button" class="filter-btn" data-id="shakes">
           shakes
-        </button>
-      </div> -->
-
+        </button> -->
+      </div>
+      <!-- menu items -->
       <div class="section-center">
         <!-- single item -->
-        <!-- <article class="menu-item">
-          <img src="./Images/item-1.jpeg" class="photo" alt="menu-item" />
-          <div class="item-infe">
+        <article class="menu-item">
+          <img src="./menu-item.jpeg" alt="menu item" class="photo" />
+          <div class="item-info">
             <header>
               <h4>buttermilk pancakes</h4>
               <h4 class="price">$15</h4>
             </header>
             <p class="item-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Facere
-              quaerat vitae rem optio officiis temporibus et, similique, quas,
-              asperiores reiciendis necessitatibus? Aperiam accusantium
-              exercitationem commodi voluptatum cupiditate quis minus totam.
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Repudiandae, sint quam. Et reprehenderit fugiat nesciunt inventore
+              laboriosam excepturi! Quo, officia.
             </p>
           </div>
-        </article> -->
+        </article>
+        <!-- end of single item -->
+        <!-- single item -->
+        <article class="menu-item">
+          <img src="./menu-item.jpeg" alt="menu item" class="photo" />
+          <div class="item-info">
+            <header>
+              <h4>buttermilk pancakes</h4>
+              <h4 class="price">$15</h4>
+            </header>
+            <p class="item-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Repudiandae, sint quam. Et reprehenderit fugiat nesciunt inventore
+              laboriosam excepturi! Quo, officia.
+            </p>
+          </div>
+        </article>
+        <!-- end of single item -->
+        <!-- single item -->
+        <article class="menu-item">
+          <img src="./menu-item.jpeg" alt="menu item" class="photo" />
+          <div class="item-info">
+            <header>
+              <h4>buttermilk pancakes</h4>
+              <h4 class="price">$15</h4>
+            </header>
+            <p class="item-text">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Repudiandae, sint quam. Et reprehenderit fugiat nesciunt inventore
+              laboriosam excepturi! Quo, officia.
+            </p>
+          </div>
+        </article>
         <!-- end of single item -->
       </div>
     </section>
-    <script src="./app.js"></script>
+    <!-- javascript -->
+    <script src="app.js"></script>
   </body>
 </html>
